# g2p-byt5

./: .gitignore  README.md  pyproject.toml
plans/: pre-tokenization.md
src/: config.py  data.py  diagnostics.py  eval.py  infer.py  prepare_dataset.py  prepare_eval.py  train.py
